# typos

./: .clippy.toml  .clog.toml  .editorconfig  .gitattributes  .gitignore  .ignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  action.yml  appveyor.yml  azure-pipelines.yml  build.rs  committed.toml  config.schema.json  pyproject.toml  release.toml  setup.py
.cargo/: config.toml
.github/: FUNDING.yml  (+3 more)
codegen/: Cargo.toml
codegen/src/: main.rs
crates/codespell-dict/: Cargo.toml  README.md
crates/codespell-dict/assets/: compatible.csv  dictionary.txt
crates/codespell-dict/codegen/: Cargo.toml
crates/codespell-dict/codegen/src/: main.rs
crates/codespell-dict/src/: dict_codegen.rs
crates/codespell-dict/tests/: codegen.rs
crates/dictgen/: Cargo.toml
crates/dictgen/src/: aho_corasick.rs  gen.rs  insensitive.rs  lib.rs  map.rs  match.rs  ordered_map.rs  table.rs  trie.rs
crates/misspell-dict/: Cargo.toml
crates/misspell-dict/assets/: compatible.csv
crates/misspell-dict/codegen/: Cargo.toml
crates/misspell-dict/codegen/src/: main.rs
crates/misspell-dict/src/: dict_codegen.rs
crates/misspell-dict/tests/: codegen.rs
crates/typos/: Cargo.toml
crates/typos-cli/: Cargo.toml  pyproject.toml
crates/typos-cli/benches/: check_file.rs  checks.rs  cli.rs  correct_word.rs  corrections.rs  data.rs  tokenize.rs
crates/typos-cli/benches/data/: code.txt  sherlock.txt
crates/typos-cli/src/: check.rs  config.rs  default_types.rs  dict.rs  file.rs  file_type.rs  file_type_specifics.rs  lib.rs  lsp.rs  policy.rs  report.rs
crates/typos-cli/tests/: cli_tests.rs  walk_permission_denied.rs
crates/typos-cli/tests/cmd/: assumed-dir-failure.toml  config-disallowed.toml  double-escaped.toml  encodings.toml  extend-builtin-dict.toml  extend-exclude-inverted.toml  extend-ignore-identifiers-file.toml  extend-ignore-identifiers-re-bad.toml  extend-ignore-identifiers-re.toml  extend-ignore-re.toml  extend-ignore-words-file.toml  extend-ignore-words-re.toml  extend-words-case.toml  extension-equals-typo.toml  false-positives.toml  file-failure.toml  file-list-stdin.toml  filename-typo.toml  force-exclude.toml  format-github.toml  help.toml  ignore-block.toml  ignore-line.toml  missing-arg.toml  missing-config.toml  override-default-type.toml  relative-dir-failure.toml  sarif.toml  ssl-cipher-suite.toml  stdin-correct.toml  stdin-failure-multiwidth.stdin  stdin-failure-multiwidth.stdout  stdin-failure-multiwidth.toml  stdin-failure.toml  stdin-success.toml  unknown-default-field.toml  unknown-files-field.toml  unknown-top-field.toml  unknown-type-field.toml  utf16.toml
crates/typos-cli/tests/cmd/config-disallowed.in/: _typos.toml  file
crates/typos-cli/tests/cmd/en-us.in/: README.md  _typos.toml
crates/typos-cli/tests/cmd/encodings.in/: invalid_utf8.txt
crates/typos-cli/tests/cmd/extend-builtin-dict.in/: _typos.toml  foo.rs
crates/typos-cli/tests/cmd/extend-exclude-inverted.in/: _typos.toml
crates/typos-cli/tests/cmd/extend-ignore-identifiers-file.in/: file.txt  ignore.txt
crates/typos-cli/tests/cmd/extend-ignore-identifiers-re-bad.in/: _typos.toml
crates/typos-cli/tests/cmd/extend-ignore-identifiers-re.in/: _typos.toml
crates/typos-cli/tests/cmd/extend-ignore-re.in/: _typos.toml  olt-manager.php
crates/typos-cli/tests/cmd/extend-ignore-words-file.in/: file.txt
crates/typos-cli/tests/cmd/extend-ignore-words-re.in/: _typos.toml
crates/typos-cli/tests/cmd/extend-words-case.in/: _typos.toml  file.txt
crates/typos-cli/tests/cmd/extension-equals-typo.in/: _typos.toml  foo.boom
crates/typos-cli/tests/cmd/false-positives.in/: README.md  foo.bb  sample.cpp  sample.jl  sample.py  sample.rs  sample.txt
crates/typos-cli/tests/cmd/file-list-stdin.in/: _typos.toml
crates/typos-cli/tests/cmd/force-exclude.in/: _typos.toml  binary
crates/typos-cli/tests/cmd/format-github.in/: file.txt
crates/typos-cli/tests/cmd/ignore-block.in/: _typos.toml  file.ignore
crates/typos-cli/tests/cmd/ignore-line.in/: _typos.toml  file.ignore
crates/typos-cli/tests/cmd/ignore-next-line.in/: _typos.toml  file.ignore
crates/typos-cli/tests/cmd/override-default-type.in/: _typos.toml
crates/typos-cli/tests/cmd/sarif.in/: _typos.toml  bad
crates/typos-dict/: Cargo.toml
crates/typos-dict/assets/: allowed.csv  english.csv  top-1000-most-frequent-words.csv  words.csv
crates/typos-dict/benches/benches/: aho_corasick_codegen.rs  main.rs
crates/typos-dict/codegen/: Cargo.toml
crates/typos-dict/codegen/src/: main.rs
crates/typos-dict/src/: dict_codegen.rs  lib.rs
crates/typos-dict/tests/: codegen.rs  verify.rs
crates/typos-dict/verify/: Cargo.toml
crates/typos-dict/verify/src/: main.rs
crates/typos-lsp/: Cargo.toml
crates/typos-lsp/src/: check.rs  lib.rs  main.rs
crates/typos-vars/: Cargo.toml
crates/typos-vars/codegen/: Cargo.toml
crates/typos-vars/codegen/src/: main.rs
crates/typos-vars/src/: lib.rs  vars_codegen.rs
crates/typos-vars/tests/: codegen.rs
crates/typos/src/: check.rs  checks.rs  dict.rs  error.rs  lib.rs  parser.rs  report.rs  tokens.rs
crates/varcon/: Cargo.toml
crates/varcon-core/: Cargo.toml
crates/varcon-core/src/: borrowed.rs  lib.rs  parser.rs
crates/varcon-parser/: Cargo.toml
crates/varcon-parser/src/: lib.rs
crates/varcon/assets/: README  varcon.txt
crates/varcon/codegen/: Cargo.toml
crates/varcon/codegen/src/: main.rs
crates/varcon/src/: lib.rs
crates/varcon/tests/: codegen.rs
crates/wikipedia-dict/: Cargo.toml
crates/wikipedia-dict/assets/: dictionary.txt
crates/wikipedia-dict/codegen/: Cargo.toml
crates/wikipedia-dict/src/: dict_codegen.rs  lib.rs
crates/wikipedia-dict/tests/: codegen.rs
dict/misspell/: Cargo.toml  README.md
dict/misspell/codegen/: Cargo.toml
dict/misspell/codegen/src/: main.rs
dict/misspell/src/: dict_codegen.rs  lib.rs
typos/: Cargo.toml
typos-dict/: Cargo.toml
typos-dict/src/: dict.rs  dict_codegen.rs
typos/src/: checks.rs  dict.rs  lib.rs  report.rs  tokens.rs
(+107 files in other folders)
