[package]
name = "typos-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
futures = "0.3.27"
httparse = "1.8.0"
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = "0.7.7"
tower-lsp = "0.19.0"
tracing = "0.1.37"

[dev-dependencies]
env_logger = "*"
test-log = { version = "0.2.11", features = ["trace"] }
tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
