[workspace]
members = [
    "crates/*",
]
default-members = ["crates/typos-cli"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/crate-ci/typos"
edition = "2021"
rust-version = "1.65.0"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
