[package]
name = "typos-codegen"
version = "1.0.0"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Source Code Spelling Correction"
repository = "https://github.com/crate-ci/imperative"
documentation = "https://docs.rs/imperative"
readme = "README.md"
categories = ["text-processing"]
license = "MIT"
edition = "2018"
publish = false

[badges]
travis-ci = { repository = "epage/typos" }
appveyor  = { repository = "epage/typos" }

[dependencies]
phf = { version = "0.7", features = ["unicase"] }
phf_codegen = "0.8"
csv = "1.0"
unicase = "1.1"
codegenrs = "0.1"
structopt = "0.3"
