[package]
name = "typos-dict"
version = "0.1.0"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Source Code Spelling Correction"
repository = "https://github.com/epage/typos"
documentation = "https://docs.rs/typos-dict"
readme = "README.md"
categories = ["development-tools", "text-processing"]
keywords = ["development", "spelling"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "epage/typos" }
appveyor  = { repository = "epage/typos" }

[features]
# Support quickly iterating
iterate_unstable = []

[dependencies]
typos = { version = "0.1", path = "../typos" }
phf = { version = "0.7", features = ["unicase"] }
unicase = "1.1"
log = "0.4"
