[package]
name = "typos"
version = "0.1.0"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Source Code Spelling Correction"
repository = "https://github.com/epage/typos"
documentation = "https://docs.rs/typos"
readme = "../README.md"
categories = ["development-tools", "text-processing"]
keywords = ["development", "spelling"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "epage/typos" }
appveyor  = { repository = "epage/typos" }

[dependencies]
failure = "0.1"
regex = "1.0"
lazy_static = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.8"
unicase = "1.1"
bstr = "0.2"
log = "0.4"
unicode-segmentation = "1.3.0"
derive_more = "0.15.0"
