[package]
name = "dictgen"
version = "0.2.11"
description = "Compile-time case-insensitive map"
categories = ["development-tools", "text-processing"]
keywords = ["development", "spelling", "no_std"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[features]
default = ["std"]
std = []
codegen = ["std"]
map = ["dep:phf", "dep:phf_shared"]

[dependencies]
unicase = "2.7"
phf = { version = "0.11", features = ["unicase"], optional = true }
phf_shared = { version = "0.11", optional = true }

[lints]
workspace = true
