[package]
name = "dictgen"
version = "0.3.1"
description = "Compile-time case-insensitive map"
categories = ["development-tools", "text-processing"]
keywords = ["development", "spelling", "no_std"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[features]
default = ["std"]
std = []
codegen = ["std", "dep:phf_codegen"]
map = ["dep:phf", "dep:phf_shared"]
aho-corasick = ["dep:aho-corasick"]

[dependencies]
unicase = "2.8.1"
phf = { version = "0.11", features = ["unicase"], optional = true }
phf_shared = { version = "0.11", optional = true }
phf_codegen = { version = "0.11", optional = true }
aho-corasick = { version = "1.1.3", optional = true }

[lints]
workspace = true
