[package]
name = "misspell-dict"
version = "0.4.0"
description = "Source Code Spelling Correction"
readme = "README.md"
categories = ["development-tools", "text-processing"]
keywords = ["development", "spelling"]
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.release]
release = false

[dependencies]
unicase = "2.7"
dictgen = { version = "^0.2", path = "../dictgen" }

[dev-dependencies]
unicase = "2.7"
itertools = "0.12"
codegenrs = "3.0"
regex = "1"
dictgen = { version = "^0.2", path = "../dictgen", features = ["codegen"] }
snapbox = "0.6.5"

[lints]
workspace = true
