[package]
name = "typos-cli"
version = "1.14.3"
description = "Source Code Spelling Correction"
readme = "../../README.md"
categories = ["development-tools", "text-processing"]
keywords = ["development", "spelling"]
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.maturin]
name = "typos"

[package.metadata.docs.rs]
no-default-features = true

[package.metadata.release]
tag-prefix = ""
pre-release-replacements = [
  {file="../../CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="../../CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="../../CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="../../CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="../../CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/crate-ci/typos/compare/{{tag_name}}...HEAD", exactly=1},
  {file="../../action/entrypoint.sh", search="VERSION=.*", replace="VERSION={{version}}", min=1},
  {file="../../docs/pre-commit.md", search="rev: .*", replace="rev: {{tag_name}}", exactly=1},
  {file="../../setup.py", search="TYPOS_VERSION = .*", replace="TYPOS_VERSION = '{{version}}'", exactly=1},
]

[features]
default = ["dict", "vars"]
dict = ["typos-dict"]
vars = ["typos-vars"]


[[bin]]
name = "typos"
path = "src/bin/typos-cli/main.rs"
doc = false

[dependencies]
typos = { version = "^0.10", path = "../typos" }
varcon-core = { version = "^2.2.9", path = "../varcon-core" }
typos-dict = { version = "^0.9", path = "../typos-dict", optional = true }
typos-vars = { version = "^0.8", path = "../typos-vars", optional = true }
unicase = "2.6"
anyhow = "1.0"
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.2"
log = "0.4"
env_logger = { version = "0.10", default-features = false, features = ["auto-color"] }
atty = "0.2.14"
concolor = { version = "0.1.1" }
concolor-clap = { version = "0.1.0", features = ["api"] }
bstr = "1.3"
once_cell = "1.17.1"
ahash = "0.8"
difflib = "0.4"
proc-exit = "2.0"
human-panic = "1.1.1"
content_inspector = "0.2.4"
unicode-segmentation = "1.10.1"
derive_more = "0.99.17"
derive_setters = "0.1"
itertools = "0.10"
serde_json = "1.0"
encoding = "0.2"
kstring = { version = "2.0.0", features = ["serde"] }
typed-arena = "2.0.2"
maplit = "1.0"
unicode-width = "0.1.10"
unic-emoji-char = "0.9.0"
thread_local = "1.1.7"
globset = "0.4.10"
anstyle = "0.3.1"
anstream = "0.2.0"
serde_regex = "1.1.0"
regex = "1.7.2"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter", "fmt", "smallvec", "std"] }
tower-lsp = "0.19.0"
tracing = "0.1.37"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }

[dev-dependencies]
assert_fs = "1.0"
trycmd = "0.14.13"
criterion = "0.4"
test-log = { version = "0.2.11", features = ["trace"] }
httparse = "1.8.0"

[[bench]]
name = "checks"
harness = false

[[bench]]
name = "corrections"
harness = false

[[bench]]
name = "tokenize"
harness = false
