[build-system]
requires = ["maturin>=1.4,<1.5"]
build-backend = "maturin"

[project]
name = "typos"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
module-name = "typos"
bindings = "bin"
