[build-system]
requires = ["maturin>=1.9,<1.10"]
build-backend = "maturin"

[project]
name = "typos"
description = "Source Code Spelling Correction"
requires-python = ">=3.8"
keywords = [
  "development", "spelling"
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

readme = "../../README.md"

[project.urls]
Repository = "https://github.com/crate-ci/typos"
Documentation = "https://github.com/crate-ci/typos#typos"
Changelog = "https://github.com/crate-ci/typos/blob/master/CHANGELOG.md"
Releases = "https://github.com/crate-ci/typos/releases"

[tool.maturin]
module-name = "typos"
bindings = "bin"
