[package]
name = "typos-dict"
version = "0.12.4"
description = "Source Code Spelling Correction"
readme = "../../README.md"
categories = ["development-tools", "text-processing"]
keywords = ["development", "spelling"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
phf = "0.11.2"
dictgen = { version = "^0.3", path = "../dictgen", features = ["map"] }

[dev-dependencies]
csv = "1.3"
itertools = "0.14"
edit-distance = "2.1"
unicase = "2.8.1"
codegenrs = "3.0"
dictgen = { version = "^0.3", path = "../dictgen", features = ["codegen", "map", "aho-corasick"] }
varcon = { version = "^1.0", path = "../varcon" }
snapbox = "0.6.5"
indexmap = "2.2.6"
divan = "0.1.16"
heck = "0.5.0"

[lints]
workspace = true

[[bench]]
name = "benches"
harness = false
