[package]
name = "typos-dict"
version = "0.13.7"
description = "Source Code Spelling Correction"
readme = "../../README.md"
categories = ["development-tools", "text-processing"]
keywords = ["development", "spelling"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
phf = "0.13.1"
dictgen = { version = "^0.4", path = "../dictgen", features = ["map"] }

[dev-dependencies]
csv = "1.3"
itertools = "0.14"
edit-distance = "2.1"
unicase = "2.8.1"
codegenrs = "3.0"
dictgen = { version = "^0.4", path = "../dictgen", features = ["codegen", "map", "aho-corasick"] }
varcon = { version = "^1.0", path = "../varcon" }
snapbox = "0.6.21"
indexmap = "2.11.4"
divan = "0.1.21"
heck = "0.5.0"

[lints]
workspace = true

[[bench]]
name = "benches"
harness = false
