[package]
name = "typos-lsp"
version = "0.1.0"
description = "Source Code Spelling Correction"
readme = "../../README.md"
categories = ["development-tools", "text-processing"]
keywords = ["development", "spelling"]
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bstr = "1.4.0"
content_inspector = "0.2.4"
futures = "0.3.27"
httparse = "1.8.0"
regex = "1.7.3"
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = "0.7.7"
tower-lsp = "0.19.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
typos = { version = "0.10.11", path = "../typos" }
typos-cli = { version = "1.14.3", path = "../typos-cli" }

[dev-dependencies]
env_logger = "*"
test-log = { version = "0.2.11", features = ["trace"] }
tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
