[package]
name = "typos-vars"
version = "0.8.15"
description = "Source Code Spelling Correction"
readme = "../../README.md"
categories = ["development-tools", "text-processing"]
keywords = ["development", "spelling"]
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[dependencies]
unicase = "2.7"
dictgen = { version = "^0.2", path = "../dictgen" }
varcon-core = { version = "^4.0", path = "../varcon-core", features = ["flags"] }

[dev-dependencies]
varcon = { version = "^0.7", path = "../varcon", features = ["flags"] }
varcon-core = { version = "^4.0", path = "../varcon-core", features = ["flags"] }
typos = { version = "^0.10", path = "../typos" }
unicase = "2.7"
codegenrs = "3.0"
itertools = "0.12"
dictgen = { version = "^0.2", path = "../dictgen", features = ["codegen"] }
snapbox = { version = "0.4.16", features = ["path"] }
