[package]
name = "typos"
version = "0.10.19"
description = "Source Code Spelling Correction"
readme = "../../README.md"
categories = ["development-tools", "text-processing"]
keywords = ["development", "spelling"]
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
winnow = "0.5.36"
unicode-xid = "0.2.4"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
simdutf8 = "0.1.4"
itertools = "0.12"
unicode-segmentation = "1.10.1"
bstr = "1.9"
