[package]
name = "varcon-core"
version = "4.0.8"
description = "Varcon-relevant data structures"
readme = "../../README.md"
categories = ["text-processing"]
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
parser = ["dep:winnow"]
flags = ["dep:enumflags2"]

[dependencies]
winnow = { version = "0.6.7", optional = true }
enumflags2 = { version = "0.7", optional = true }

[lints]
workspace = true
