[package]
name = "varcon-core"
version = "5.0.2"
description = "Varcon-relevant data structures"
readme = "../../README.md"
categories = ["text-processing"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[features]
default = []
parser = ["dep:winnow"]
flags = ["dep:enumflags2"]

[dependencies]
winnow = { version = "0.7.0", optional = true }
enumflags2 = { version = "0.7", optional = true }

[lints]
workspace = true

[dev-dependencies]
snapbox = "0.6.17"
