[package]
name = "varcon"
version = "0.7.6"
description = "Source Code Spelling Correction"
readme = "../../README.md"
categories = ["development-tools", "text-processing"]
keywords = ["development", "spelling"]
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["all"]
all = ["flags"]
flags = ["varcon-core/flags"]

[dependencies]
varcon-core = { version = "^4.0", path = "../varcon-core" }

[dev-dependencies]
codegenrs = "3.0"
varcon-core = { version = "^4.0", path = "../varcon-core", features = ["parser"] }
snapbox = "0.6.5"

[lints]
workspace = true
